--- a/app/views/static_pages/_search_bar.html.erb
+++ b/app/views/static_pages/_search_bar.html.erb
@@ -1,10 +1,7 @@
 <%= form_for("search", url: 'search_games', method: :get, html: {remote: true, id: 'search-form'} ) do |f| %>
 <span id="search-errors" class="uk-form-icon search-icon" uk-icon="search"></span>
-<%= content_tag(:span, nil, id: "infc", class: "info-icon", "uk-icon": "info")%>
+<%= content_tag(:span, nil, id: "infc", class: "info-icon", "uk-icon": "info", "uk-tooltip": "title: IGDB: Free Video Game Database; pos: right")%>
 <%= f.text_field(:inquiry, placeholder: "Search video games..." , id: "search-igdb-bar", class: "uk-search-input search-bar", autofocus: "true", autocomplete: "off") %>
-<div class="api-status" uk-dropdown="toggle: #infc; pos: right-center; mode: hover; animation: uk-animation-scale-up; delay-hide: 0; duration: 100">
-  <%= svg 'igdb_icon' %> IGDB: Free Video Game Database
-</div>
 <div class="search-dropdown" uk-dropdown="toggle: #search-igdb-bar; pos: bottom-center; mode: click">
   <ul class="nav">
     <li><%= content_tag :a, nil, id: 'switch_to_f', class: 'active', 'uk-icon': 'settings' %></li>
