--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -678,9 +678,10 @@ li.active:hover .opts {
 
 .info-icon {
     position: absolute;
-    right: 10px;
+    right: 5px;
     top: 10px;
     color: #888;
+    min-width: 25px;
 }
 
 .info-icon:hover {
@@ -711,49 +712,8 @@ li.active:hover .opts {
     }
 }
 
-// API Status and Search warnings (Search IGDB) - - - - - - - - - - - - - - - //
-.errors {
-    background-color: #666666de;
-    border-radius: 5px;
-    padding: 7px;
-    text-align: left;
-    min-width: auto;
-
-    p {
-        font-size: 12px;
-        color: #fff;
-        margin-bottom: 0px;
-    }
-
-    ul {
-        margin: 0px;
-        margin-bottom: 3px;
-    }
-
-    li {
-        font-size: 12px;
-        color: #fff;
-        padding-left: 0px;
-    }
-}
-
-.api-status {
-    @extend .errors;
-
-    width: 227px;
-    font-size: 12px;
-    color: #fff;
-}
-
-.api-status.uk-dropdown.uk-open.uk-dropdown-right-center {
-    margin-left: 30px;
-}
-
-.errors.uk-dropdown.uk-open.uk-dropdown-left-center {
-    margin-left: -20px;
-}
-
 // Search Dropodown (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - //
+
 .search-dropdown {
     background: #d4d4d4f0;
 
@@ -958,10 +918,8 @@ li.active:hover .opts {
     box-shadow: none;
     background: none;
     border: 0px;
-    transition-duration: 0.8s;
     font-size: 15px;
-    text-transform: capitalize;
-    color: #666;
+    color: #777;
     padding: 0px 5px 0px 0px;
     height: 35px;
 }
@@ -971,8 +929,7 @@ li.active:hover .opts {
 }
 
 .reset-button:hover {
-    color: inherit;
-    filter: drop-shadow(0px 2px 3px #ACACAC);
+    color: #555;
 }
 
 .reset-button:active {
