Dark style additional info.

--- a/app/assets/stylesheets/theme_dark.scss
+++ b/app/assets/stylesheets/theme_dark.scss
@@ -549,3 +549,19 @@ html {
     background: #0000002e;
     color: #ccc;
 }
+
+// Additional info
+
+.c-addl {
+    background-color: #444;
+    color: #bbb;
+}
+
+tr.l-addl {
+    color: #aaa;
+}
+
+.p-addl {
+    background-color: #2d2d2d;
+    color: #bbb;
+}
