--- a/app/assets/stylesheets/theme_dark.scss
+++ b/app/assets/stylesheets/theme_dark.scss
@@ -159,8 +159,6 @@ li.active .m-add svg {
     }
 }
 
-// Search History (Page)
-
 // Covers (Search IGDB)
 .name.owned {
     box-shadow: 0px 2px 0px 0px #555;
@@ -385,8 +383,33 @@ div.t-name {
 }
 
 // No Results (Search IGDB)
+//
+#no-games a:hover, #no-results a:hover {
+    color: #999;
+}
 
 // Notifications
+
+.uk-notification-message {
+    background-color: #3e3e3ee0;
+    color: #aaa;
+
+    .g {
+        color: #787bec;
+    }
+
+    .b {
+        color: #f0506e;
+    }
+
+    .c {
+        color: #aaa;
+
+        &:hover {
+            color: #ccc;
+        }
+    }
+}
 
 // No Cover
 .no-cover span {
@@ -431,7 +454,6 @@ html {
 .uk-radio, .uk-checkbox {
     border: 1px solid #888;
 }
-
 
 .uk-radio:focus, .uk-checkbox:focus {
     border-color: #888;
@@ -486,11 +508,11 @@ html {
 
 .search-bar {
     background-color: #3e3e3e;
-
     color: #bbb;
 
     &::placeholder {
-        color: #999;    }
+        color: #999;
+    }
 }
 
 .info-icon {
@@ -524,6 +546,7 @@ html {
 
 .search-button, .reset-button {
     color: #999;
+
     &:hover {
         color: #bbb;
     }
