Dark style shared logo

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,7 +88,7 @@ $disabled: #b4b4b4;
 
     p.shared {
         font-size: 20px;
-        color: #ababab;
+        color: #a7a7a7;
         padding-left: 1px;
         letter-spacing: 7px;
         width: 110.5px;
@@ -107,7 +107,7 @@ $disabled: #b4b4b4;
     .title {
         font-size: 23px;
         letter-spacing: 1px;
-        color: #ababab;
+        color: #a7a7a7;
         font-weight: 300;
         padding-right: 15px;
     }
@@ -117,7 +117,7 @@ $disabled: #b4b4b4;
     }
 
     .message {
-        color: #999;
+        color: #949494;
         display: block;
         font-size: 14px;
         max-width: 300px;
