--- a/app/assets/stylesheets/theme_dark.scss
+++ b/app/assets/stylesheets/theme_dark.scss
@@ -300,8 +300,8 @@ div.t-name {
     color: #ccc;
 }
 
-.g-year, .g-platforms {
-    color: #888;
+.g-year, .g-by, .g-platforms {
+    color: #999;
 }
 
 .g-extra {
@@ -326,6 +326,7 @@ div.t-name {
 
 .g-metacritic svg, .g-metacritic:active svg, .g-metacritic:focus svg {
     fill: #aaa;
+    transition: 0.1s ease-in-out;
 }
 
 .ms-b-down {
@@ -643,4 +644,69 @@ div#search-results.mask2:after {
     .message:hover {
         color: #ccc;
     }
+}
+
+// List info
+
+#t-game-show {
+    .uk-modal-body {
+        background: #444;
+    }
+
+    .g-google, .g-google:active, .g-google:focus {
+        background: #666;
+        color: #aaa;
+    }
+
+    .g-google:hover {
+        background: #5e5e5e;
+        color: #d2d2d2;
+    }
+
+    .g-metacritic, .g-metacritic:active, .g-metacritic:focus {
+        background: #626262;
+        border-color: #888;
+        transition-property: color, background-color, border-color;
+    }
+
+    .g-metacritic svg, .g-metacritic:active svg, .g-metacritic:focus svg {
+        fill: #aaa;
+    }
+
+    .g-metacritic:hover svg {
+        max-width: 92%;
+        fill: #d2d2d2;
+    }
+
+    .info-by, .info-platform {
+        color: #999;
+    }
+
+    .info-title, .info-year {
+        color: #ccc;
+    }
+
+    .i-no-cover {
+        background-color: #3a3a3a;
+        color: #777;
+        border-color: #777;
+    }
+
+    .i-no-cover svg path {
+        fill: #777 !important;
+    }
+
+    hr {
+        border-color: #888;
+    }
+
+    .t-cover {
+        background-color: #3a3a3a;
+    }
+}
+
+// Modal Close Button
+
+.uk-close:hover {
+    color: #ccc;
 }
