--- a/app/views/collections/edit.js.erb
+++ b/app/views/collections/edit.js.erb
@@ -1,4 +1,5 @@
 var $modal = $("#coll-modal");
 $modal.find('#coll-action').text('Edit');
 $modal.find(".modal-content").html("<%= j(render 'form') %>");
-$('#collection_name').focus();
+var input = $('#collection_name');
+var temp = input.focus().val(); input.val('').val(temp);
