--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -100,7 +100,8 @@ $disabled: #b4b4b4;
     width: calc(100% - 60px);
 
     div:last-child {
-        margin-left: 15px;
+        margin-left: 20px;
+        padding-left: 10px;
         box-shadow: -7px 0px 0 -5px #cacaca;
     }
 
@@ -1172,12 +1173,8 @@ p.have-account {
     padding-left: 40px;
 }
 
-.share-input:focus {
-    background-color: #ddd;
-    color: #666;
-    ~ span svg g g {
+.share-input:focus ~ span svg g g {
         fill: #666;
-    }
 }
 
 .margin-bottom-15 {
