--- a/app/views/users/_settings.html.erb
+++ b/app/views/users/_settings.html.erb
@@ -45,7 +45,7 @@
     </div>
   </div>
 <div class="strike part"><span>Games per page:</span></div>
-<p class="discription">Define how many games you want to see per page. Only applies to your collections.</p>
+<p class="discription">Define how many games you want to see per page. This setting does not apply to shared collections.</p>
 <%= form_with(url: change_gpv_url) do %>
 <table class="range-holder">
   <tr>
