--- a/app/views/charts/_by_format_overall.html.erb
+++ b/app/views/charts/_by_format_overall.html.erb
@@ -1,9 +1,26 @@
-<% options = { legend: { position: 'right'},
-              plugins: { datalabels: { color: '#fff', borderRadius: 9999, borderWidth: 2, borderColor: '#fff', anchor: 'end' } },
+<% cookie = shared ? cookies[:sh_theme] : cookies[:theme] %>
+<% if cookie != 'theme_dark' %>
+
+  <% options = { legend: { position: 'right'},
+                plugins: { datalabels: { color: '#fff', borderRadius: 9999, borderWidth: 2, borderColor: '#fff', anchor: 'end' } },
+                layout: { padding: { top: 15, bottom: 15, right: 0 } }
+                } %>
+  <% colors = ['#49AB8a', '#ab496a', '#bababa'] %>
+  <% dataset_options = { datalabels: { backgroundColor: colors } } %>
+
+<% else %>
+
+<% options = { legend: { position: 'right', labels: { fontColor: '#ccc' } },
+              plugins: { datalabels: { color: '#fff', borderRadius: 9999, borderWidth: 2, borderColor: '#ccc', anchor: 'end' } },
               layout: { padding: { top: 15, bottom: 15, right: 0 } }
               } %>
-<% colors = ['#49AB8a', '#ab496a', '#bababa'] %>
-<% dataset_options = { datalabels: { backgroundColor: colors } } %>
+
+  <% colors = ['#5759a9', '#ca5d9d', '#666'] %>
+
+  <% dataset_options = { datalabels: { backgroundColor: colors }, borderColor: '#ccc' } %>
+
+<% end %>
+
 <%= pie_chart data,
 id: 'first-chart',
 donut: true,
