--- a/app/views/charts/_by_platform.html.erb
+++ b/app/views/charts/_by_platform.html.erb
@@ -1,14 +1,29 @@
 <% no_data = data[:data].empty? %>
 <% unless no_data %>
-  <%= content_tag :a, 'hide labels', class: 'hide-labels', 'chart_id' => 'moved-by-platform' %>
 
-  <% options = { legend: { position: 'left'},
-                plugins: { datalabels: { color: '#fff', borderRadius: 9999, borderWidth: 2, borderColor: '#fff', anchor: 'end' } },
+  <% cookie = shared ? cookies[:sh_theme] : cookies[:theme] %>
+  <% if cookie != 'theme_dark' %>
+
+    <% options = { legend: { position: 'left'},
+                  plugins: { datalabels: { color: '#fff', borderRadius: 9999, borderWidth: 2, borderColor: '#fff', anchor: 'end' } },
+                  layout: { padding: { top: 15, bottom: 15, right: 15 } }
+                  } %>
+    <% colors = get_colors(data[:data].size) %>
+    <% colors[colors.size - 1] = '#bababa' if overall %>
+    <% dataset_options = { datalabels: { backgroundColor: colors, opacity: 1} } %>
+  <% else %>
+
+  <% options = { legend: { position: 'left', labels: { fontColor: '#ccc' } },
+                plugins: { datalabels: { color: '#fff', borderRadius: 9999, borderWidth: 2, borderColor: '#ccc', anchor: 'end' } },
                 layout: { padding: { top: 15, bottom: 15, right: 15 } }
                 } %>
-  <% colors = get_colors(data[:data].size) %>
-  <% colors[colors.size - 1] = '#bababa' if overall %>
-  <% dataset_options = { datalabels: { backgroundColor: colors, opacity: 1} } %>
+    <% colors = get_colors(data[:data].size, :dark) %>
+    <% colors[colors.size - 1] = '#666' if overall %>
+    <% dataset_options = { datalabels: { backgroundColor: colors, opacity: 1 }, borderColor: '#ccc' } %>
+  <% end %>
+
+  <%= content_tag :a, 'hide labels', class: 'hide-labels', 'chart_id' => 'moved-by-platform' %>
+
   <%= pie_chart data[:data],
   id: 'moved-by-platform',
   donut: true,
