--- a/app/views/charts/_graph_form.html.erb
+++ b/app/views/charts/_graph_form.html.erb
@@ -44,27 +44,27 @@
 <div class="strike uk-margin-small"><span class="ch-graphs">Graphs: </span></div>
   <ul uk-accordion>
     <li id="li-by-collection">
-      <a class="uk-accordion-title" href="#"><span class="dzida">Games by collection</span></a>
+      <a class="uk-accordion-title" href="#">Games by collection</a>
       <div id="by-collection" class="chrt-holder uk-accordion-content">
       </div>
     </li>
     <li id="li-by-format">
-      <a class="uk-accordion-title" href="#"><span class="dzida">Games by format</span></a>
+      <a class="uk-accordion-title" href="#">Games by format</a>
       <div id="by-format" class="chrt-holder uk-accordion-content">
       </div>
     </li>
     <li id="li-by-platform">
-      <a class="uk-accordion-title" href="#"><span class="dzida">Games by platform</span></a>
+      <a class="uk-accordion-title" href="#">Games by platform</a>
       <div id="by-platform" class="chrt-holder uk-accordion-content">
       </div>
     </li>
     <li>
-      <a class="uk-accordion-title" href="#"><span class="dzida">Games by release year</span></a>
+      <a class="uk-accordion-title" href="#">Games by release year</a>
       <div id="by-release" class="chrt-holder uk-accordion-content">
       </div>
     </li>
     <li>
-      <a class="uk-accordion-title" href="#"><span class="dzida">Games by developer</span></a>
+      <a class="uk-accordion-title" href="#">Games by developer</a>
       <div id="by-developer" class="chrt-holder uk-accordion-content">
       </div>
     </li>
