--- a/app/views/charts/_by_developer_overall.html.erb
+++ b/app/views/charts/_by_developer_overall.html.erb
@@ -3,9 +3,22 @@
   <%= content_tag :a, 'hide labels', class: 'hide-labels', 'chart_id' => 'dev_a_over, dev_b_over' %>
   <%= content_tag :div, class: 'uk-grid-collapse', 'uk-grid' => '' do %>
 
+    <% cookie = shared ? cookies[:sh_theme] : cookies[:theme] %>
+    <% if cookie != 'theme_dark' %>
+      <% options = { scales: { xAxes: [{ ticks: { max: data[:max], stepSize: 1 } }]} } %>
+      <% colors = ['rgba(73, 171, 138, 1)','rgba(171, 73, 106, 1)', 'rgba(186, 186, 186, 1)' ] %>
+    <% else %>
+
+      <% options = { legend: { labels: { fontColor: '#ccc' } },
+                  scales: { xAxes: [{ gridLines: { color: 'rgba(92,92,92,1)', zeroLineColor: 'rgba(92,92,92,1)' },
+                   ticks: { max: data[:max], stepSize: 1, fontColor: '#ccc' } }],
+                            yAxes: [gridLines: { color: 'rgba(92,92,92,1)'}, ticks: { fontColor: '#ccc' }] }
+                 } %>
+
+      <% colors = ['rgba(87,89,169, 1)','rgba(202,93,157,1)', 'rgba(119, 119, 119, 1)'] %>
+    <% end %>
+
     <% dataset_options = { borderWidth: 0, datalabels: { color: '#fff', opacity: 1 } }  %>
-    <% options = { scales: { xAxes: [{ ticks: { max: data[:max], stepSize: 1 } }]} } %>
-    <% colors = ['rgba(73, 171, 138, 1)','rgba(171, 73, 106, 1)', 'rgba(186, 186, 186, 1)' ] %>
 
     <%= bar_chart data[:data_1],
       id: 'dev_a_over',
